# fluent-python

./: .gitignore  getkeydunder.py  math_vector.py  pyproject.toml  pythonic_deck.py  tmp.py
0.0-doctest/: doct.py
17.iterators-generators-classics-coroutines/13./: coroaverager.py  coroaverager2.py  coroaverager_yield_from.py
19.concurrent-py-models/.4/: hello_world_threads.py
19.concurrent-py-models/.5/is_prime/: hello_world_corrotine.py  hello_world_processes.py  hello_world_threads.py
19.concurrent-py-models/4./: hello_w_requests.py  hello_world_corrotine.py  hello_world_processes.py
19.concurrent-py-models/4./w_req/: hello_world_corrotine.py
19.concurrent-py-models/6./: sequence.py  sequence_procs.py  utils.py
20.concurrent-executors/2./: flags.py  flags_threadpool.py  flags_threadpool_futures.py
20.concurrent-executors/3./: primes.py  procs_threadpool.py
20.concurrent-executors/4./: demo_executor_map.py
20.concurrent-executors/5./: flags2_asyncio.py  flags2_sequential.py  flags2_threadpool.py  testing_tqdm.py
21.async-python/3./: blogdom.py
21.async-python/5./: async_pg_transaction.py  async_pg_transaction_ctx_manager.py  flags.py  flags_async.py
