[tool.poetry]
name = "fluent-python"
version = "0.1.0"
description = ""
authors = ["macwdo <danilo.macedofernandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
tqdm = "^4.66.5"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
